--- a/2425.html
+++ b/2425.html
@@ -15,14 +15,14 @@
         </div>
     
         <ul class="dewamAmbalan">
-                <li><b>Pradana Putra</b>: <a href="https://www.instagram.com/p/C_UD7VQTa2C/?utm_source=ig_web_copy_link&igsh=MTBocmdrdG5xeHVyNQ==">Azhali Bensyafei Udang</a></li>
-                <li><b>Pradana Putri </b>: <a href="https://www.instagram.com/p/C_UD2u_TbUJ/?utm_source=ig_web_copy_link&igsh=MXcwaDZnOG45c3R3bw==">Oriza Munaung</a></li>
-                <li><b>Pemangku Adat Putra</b>: <a href="https://www.instagram.com/p/C_UDypAT_7X/?utm_source=ig_web_copy_link&igsh=MTh4bGo4MHdpdjFseQ==">Fabrisio Abimanyu Pareho</a></li>
-                <li><b>Pemangku Adat Putri</b>: <a href="https://www.instagram.com/p/C_UDubHztPT/?utm_source=ig_web_copy_link&igsh=anQ3MGRhOGpjaDgz">Cindy Nelwan</a></li>
-                <li><b>Kerani Putra </b>: <a href="https://www.instagram.com/p/C_UDqE_TBA1/?utm_source=ig_web_copy_link&igsh=MWcwdzdqNHVjb2Zybw==">Leon Runtulalo</a> </li>
-                <li><b>Kerani Putri</b>: <a href="https://www.instagram.com/p/C_UDiiezMrR/?utm_source=ig_web_copy_link&igsh=bGsyeWRrNDduZHhh">Chelsea Palar</a></li>
-                <li><b>Juru Uang Putra</b>: <a href="https://www.instagram.com/p/C_UDaaNTrjP/?utm_source=ig_web_copy_link&igsh=dGV6MmlzNTkyZWFv">Syahrul Hadmojo</a></li>
-                <li><b>Juru Uang Putri</b>: <a href="https://www.instagram.com/p/C_TSLw9z5Fi/?utm_source=ig_web_copy_link&igsh=MTQyNjBlNTFreDVyaQ==">Kevanya Awuy</a></li>
+                <li><b>Pradana Putra</b> <a href="https://www.instagram.com/p/C_UD7VQTa2C/?utm_source=ig_web_copy_link&igsh=MTBocmdrdG5xeHVyNQ==">Azhali Bensyafei Udang</a></li>
+                <li><b>Pradana Putri </b> <a href="https://www.instagram.com/p/C_UD2u_TbUJ/?utm_source=ig_web_copy_link&igsh=MXcwaDZnOG45c3R3bw==">Oriza Munaung</a></li>
+                <li><b>Pemangku Adat Putra</b> <a href="https://www.instagram.com/p/C_UDypAT_7X/?utm_source=ig_web_copy_link&igsh=MTh4bGo4MHdpdjFseQ==">Fabrisio Abimanyu Pareho</a></li>
+                <li><b>Pemangku Adat Putri</b> <a href="https://www.instagram.com/p/C_UDubHztPT/?utm_source=ig_web_copy_link&igsh=anQ3MGRhOGpjaDgz">Cindy Nelwan</a></li>
+                <li><b>Kerani Putra </b> <a href="https://www.instagram.com/p/C_UDqE_TBA1/?utm_source=ig_web_copy_link&igsh=MWcwdzdqNHVjb2Zybw==">Leon Runtulalo</a> </li>
+                <li><b>Kerani Putri</b> <a href="https://www.instagram.com/p/C_UDiiezMrR/?utm_source=ig_web_copy_link&igsh=bGsyeWRrNDduZHhh">Chelsea Palar</a></li>
+                <li><b>Juru Uang Putra</b> <a href="https://www.instagram.com/p/C_UDaaNTrjP/?utm_source=ig_web_copy_link&igsh=dGV6MmlzNTkyZWFv">Syahrul Hadmojo</a></li>
+                <li><b>Juru Uang Putri</b> <a href="https://www.instagram.com/p/C_TSLw9z5Fi/?utm_source=ig_web_copy_link&igsh=MTQyNjBlNTFreDVyaQ==">Kevanya Awuy</a></li>
         </ul>
         <nav class="Isak">
             <ul>
