--- a/2526.html
+++ b/2526.html
@@ -15,14 +15,14 @@
         </div>
         
         <ul class="dewamAmbalan">
-                <li><b>Pradana Putra</b>: <a href="">Muhamad Rinaldi Alghifari Saba</a></li>
-                <li><b>Pradana Putri </b>: <a href="">Eukharistia Anjani Pesik</a></li>
-                <li><b>Pemangku Adat Putra</b>: <a href="">Gerald Juniord Taroreh</a></li>
-                <li><b>Pemangku Adat Putri</b>: <a href="">Jeniver Claudia Teleng</a></li>
-                <li><b>Kerani Putra </b>: <a href="">Leon Francesco Kolamban</a></li>
-                <li><b>Kerani Putri</b>: <a href="">Ayu Welmina Pala</a></li>
-                <li><b>Juru Uang Putra</b>: <a href="">Muhammad Vikram Masira</a></li>
-                <li><b>Juru Uang Putri</b>: <a href="">Florina Felicia Lagonda</a></li>
+                <li><b>Pradana Putra</b> <a href="">Muhamad Rinaldi Alghifari Saba</a></li>
+                <li><b>Pradana Putri </b> <a href="">Eukharistia Anjani Pesik</a></li>
+                <li><b>Pemangku Adat Putra</b> <a href="">Gerald Juniord Taroreh</a></li>
+                <li><b>Pemangku Adat Putri</b> <a href="">Jeniver Claudia Teleng</a></li>
+                <li><b>Kerani Putra </b> <a href="">Leon Francesco Kolamban</a></li>
+                <li><b>Kerani Putri</b> <a href="">Ayu Welmina Pala</a></li>
+                <li><b>Juru Uang Putra</b> <a href="">Muhammad Vikram Masira</a></li>
+                <li><b>Juru Uang Putri</b> <a href="">Florina Felicia Lagonda</a></li>
         </ul>
 
         <nav class="Isak">
