--- a/2526.html
+++ b/2526.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Struktur Dewan Ambalan</title>
-    
+    <meta "viewport" content="width=1024px, initial-scale=1">
 </head>
 
 <body>
